         errors (patch #1912101).
20080517 Makefile.am,fuse.c,mempool.[ch],unittests/unittests.c: add simple
	 memory pool code.
20080518 screenshot.c: missed file from patch #1952304 (Gergely Szasz).
20080518 machines/specplus3.h: remove reference to old specplus3_disk_present
         (Fred).
20080522 ui/{fb/fbdisplay.c,widget/Makefile.am}: fix compilation failures
	 (Stuart).
20080523 compat/unix/osname.c: uname() returns a positive integer on success
         on OpenSolaris (thanks, Andrew Owen) (Fred).
20080526 debugger/{breakpoint.c,command.c,commandy.y,debugger.c,
	 debugger_internals.h,expression.c}: ensure memory is not leaked when
	 parsing expressions.
20080526 debugger/{Makefile.am,breakpoint.c,breakpoint.h,commandl.l,commandy.y,
	 debugger.c,debugger.h,debugger_internals.h,event.c},mempool.c,
	 mempool.h,tape.c,ui/gtk/debugger.c: add "debugger events" where the
	 debugger can stop when certain events happen. So far, only "tape
	 playing" implemented.
20080527 debugger/{breakpoint.c,debugger_internals.h,event.c}: allow event
         breakpoints to be set only if the appropriate event is registered.
20080528 z80/z80.pl: emulate C, H and P/V on repeated I/O instructions.
20080528 z80/z80.pl: can't modify HL until contention has happened.
20080528 unittests/unittests.c: fix warning (Stuart).
20080528 disk/beta.c,ui/widget/pokefinder.c: make code C89 compatible with
         code from fuzegiz (thanks, sweetlilmr) (Fred).
20080528 mempool.c,debugger/event.c: add <string.h> for string prototypes
         (Fred).
20080529 z80/tests/tests.expected: update tests for improved repeated
         I/O instruction emulation.
20080529 z80/{coretest.c,tests/tests.expected}: change coretest driver to
         make fake IO ports return different values.
20080530 z80/{coretest.c,tests/tests.expected}: change the value printed
	 as well as the value returned.
20080530 z80/tests/{tests.expected,tests.in}: add new tests for improved
	 {IN,OUT}[DI] flag emulation.