@@ -2678,3 +2678,5 @@
 	 as well as the value returned.
 20080530 z80/tests/{tests.expected,tests.in}: add new tests for improved
 	 {IN,OUT}[DI] flag emulation.
+20080601 divide.c,if1.c,periph.c,periph.h,tape.c,zxatasp.c,zxcf.c: add
+	 debugger events for tape stop and peripheral page/unpage.
